#62 Delete refresh token into response body
