# swagger/src/swagger-config.yaml
@@ -357,7 +357,6 @@ paths:
           examples:
             application/json:
               {
-                "refresh": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoicmVmcmVzaCIsImV4cCI6MTY4NjkxOTA4NiwiaWF0IjoxNjg2ODMyNjg2LCJqdGkiOiIxYmVhOGVmY2YwYjc0NTVkODY0NTU3MDg4MGI5ZWIxZCIsInVzZXJfaWQiOjR9.Jn667YJy4p0Y958TmW9zIcj2BCS-_E_APRvi_fI2axk",
                 "access": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbl90eXBlIjoiYWNjZXNzIiwiZXhwIjoxNjg2ODM2Mjg2LCJpYXQiOjE2ODY4MzI2ODYsImp0aSI6ImI0OWQyZDE5NzgwZTQ3Y2M5MzJjZmJlMzZmN2UyMjI2IiwidXNlcl9pZCI6NH0.VQjwSsOuBD8UDlu966e-N3RlBZEJpWVt3rvSqg_oQGU"
               }
 
@@ -392,8 +391,6 @@ paths:
           schema:
             type: object
             properties:
-              refresh:
-                type: string
               access:
                 type: string
         400:
@@ -425,8 +422,6 @@ paths:
           schema:
             type: object
             properties:
-              refresh:
-                type: string
               access:
                 type: string
         400:
